--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit
-Pillow
-pandas
-supabase
 sqlalchemy
-psycopg2-binary
+supabase
 requests
-urllib.parse
-hashlib
-smtplib
 uuid
+smtplib
+email-validator
+markdown-it-py==3.0.0
+rich==14.0.0
+pygments==2.19.1
+mdurl==0.1.2
